--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "nodemon": "^1.9.2"
   },
   "repository": {
     "type": "git",
