--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
+    "cssmin": "^0.4.3",
     "ejs": "2.4.1",
     "express": "4.13.3",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "sass": "^0.5.0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,13 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0"
+  }
 }
